# cpp-nn-from-scratch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/nn/: activation.hpp  layer.hpp  loss.hpp  network.hpp  tensor.hpp
src/: main.cpp
tests/: test_network.cpp
